--- a/Gestion_AcademicoAdministrativa_Abastos/FormularioCurso.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/FormularioCurso.xaml
@@ -37,7 +37,7 @@
                         <RowDefinition Height="5*" />
                     </Grid.RowDefinitions>
                     <TabControl Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                        <TabItem Header="{DynamicResource FormPersonaCreationTabItemHeader}">
+                        <TabItem Header="{DynamicResource FormCursoCreationTabItemHeader}">
                             <Grid Grid.Column="1" Grid.Row="1" x:Name="CreationContentPanel"
                                   Background="{DynamicResource BackgroundContainerGradient}">
                                 <Grid.ColumnDefinitions>
@@ -46,8 +46,6 @@
                                     <ColumnDefinition  Width="5*"/>
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="5*" />
-                                    <RowDefinition Height="15*" />
                                     <RowDefinition Height="5*" />
                                     <RowDefinition Height="15*" />
                                     <RowDefinition Height="5*" />
@@ -67,15 +65,15 @@
                                         <RowDefinition Height="50*" />
                                         <RowDefinition Height="50*" />
                                     </Grid.RowDefinitions>
-                                    <Label Content="{DynamicResource FormPersonaDNI}" Grid.Column="0"/>
-                                    <TextBox x:Name="TxtDNI" Grid.Column="0" Grid.Row="1" />
+                                    <Label Content="{DynamicResource FormCursoCod}" Grid.Column="0"/>
+                                    <TextBox x:Name="TxtCod" Grid.Column="0" Grid.Row="1" />
 
-                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormPersonaDNIExample}" >
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormCursoCodxample}" >
                                         <TextBlock.Style>
                                             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
                                                 <Setter Property="Visibility" Value="Collapsed"/>
                                                 <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtDNI}" Value="">
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtCod}" Value="">
                                                         <Setter Property="Visibility" Value="Visible"/>
                                                     </DataTrigger>
                                                 </Style.Triggers>
@@ -83,15 +81,15 @@
                                         </TextBlock.Style>
                                     </TextBlock>
 
-                                    <Label Content="{DynamicResource FormPersonaNIF}" Grid.Column="2"/>
-                                    <TextBox Grid.Column="2" x:Name="TxtNIF" Grid.Row="1" />
+                                    <Label Content="{DynamicResource FormCursoNombre}" Grid.Column="2"/>
+                                    <TextBox Grid.Column="2" x:Name="TxtNombre" Grid.Row="1" />
 
-                                    <TextBlock Grid.Column="2" Grid.Row="1" Text="{DynamicResource FormPersonaNIFExample}" >
+                                    <TextBlock Grid.Column="2" Grid.Row="1" Text="{DynamicResource FormCursoNombreExample}" >
                                         <TextBlock.Style>
                                             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
                                                 <Setter Property="Visibility" Value="Collapsed"/>
                                                 <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtNIF}" Value="">
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtNombre}" Value="">
                                                         <Setter Property="Visibility" Value="Visible"/>
                                                     </DataTrigger>
                                                 </Style.Triggers>
@@ -110,82 +108,28 @@
                                         <RowDefinition Height="50*" />
                                         <RowDefinition Height="50*" />
                                     </Grid.RowDefinitions>
-                                    <Label Content="{DynamicResource FormPersonaNombre}" Grid.Column="0"/>
-                                    <TextBox x:Name="TxtNombre" Grid.Column="0" Grid.Row="1">
+                                    <Label Content="{DynamicResource FormCursoDate}" Grid.Column="0"/>
+                                    <TextBox x:Name="TxtDate" Grid.Column="0" Grid.Row="1">
                                     </TextBox>
 
-                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormPersonaNombreExample}" >
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormCursoDateExample}" >
                                         <TextBlock.Style>
                                             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
                                                 <Setter Property="Visibility" Value="Collapsed"/>
                                                 <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtNombre}" Value="">
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtDate}" Value="">
                                                         <Setter Property="Visibility" Value="Visible"/>
                                                     </DataTrigger>
                                                 </Style.Triggers>
                                             </Style>
                                         </TextBlock.Style>
                                     </TextBlock>
-                                    <Label Content="{DynamicResource FormPersonaApellidos}" Grid.Column="2"/>
-                                    <TextBox Grid.Column="2" x:Name="TxtApellidos" Grid.Row="1" />
-
-                                    <TextBlock Grid.Column="2" Grid.Row="1" Text="{DynamicResource FormPersonaApellidosExample}" >
-                                        <TextBlock.Style>
-                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
-                                                <Setter Property="Visibility" Value="Collapsed"/>
-                                                <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtApellidos}" Value="">
-                                                        <Setter Property="Visibility" Value="Visible"/>
-                                                    </DataTrigger>
-                                                </Style.Triggers>
-                                            </Style>
-                                        </TextBlock.Style>
-                                    </TextBlock>
+                                    <CheckBox Grid.Column="2" x:Name="TxtShift" Grid.Row="1" Content="{DynamicResource FormCursoShift}"/>
                                 </Grid>
-                                <Grid Grid.Row="5" Grid.Column="1">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="35*" />
-                                        <ColumnDefinition Width="15*" />
-                                        <ColumnDefinition Width="50*" />
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="50*" />
-                                        <RowDefinition Height="50*" />
-                                    </Grid.RowDefinitions>
-                                    <Label Content="{DynamicResource FormPersonaEmail}" Grid.Column="0"/>
-                                    <TextBox x:Name="TxtEmail" Grid.Column="0" Grid.Row="1" />
-
-                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormPersonaEmailExample}" >
-                                        <TextBlock.Style>
-                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
-                                                <Setter Property="Visibility" Value="Collapsed"/>
-                                                <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtEmail}" Value="">
-                                                        <Setter Property="Visibility" Value="Visible"/>
-                                                    </DataTrigger>
-                                                </Style.Triggers>
-                                            </Style>
-                                        </TextBlock.Style>
-                                    </TextBlock>
-                                    <Label Content="{DynamicResource FormPersonaTelefono}" Grid.Column="2"/>
-                                    <TextBox Grid.Column="2" x:Name="TxtTelefono" Grid.Row="1" />
-                                    <TextBlock Grid.Column="2" Grid.Row="1" Text="{DynamicResource FormPersonaTelefonoExample}" >
-                                        <TextBlock.Style>
-                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
-                                                <Setter Property="Visibility" Value="Collapsed"/>
-                                                <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtTelefono}" Value="">
-                                                        <Setter Property="Visibility" Value="Visible"/>
-                                                    </DataTrigger>
-                                                </Style.Triggers>
-                                            </Style>
-                                        </TextBlock.Style>
-                                    </TextBlock>
-                                </Grid>
-                                <Button Grid.Row="7" Grid.Column="1" Content="Crear Persona" />
+                                <Button Grid.Row="5" Grid.Column="1" Content="{StaticResource FormCursoCreationButton}" />
                             </Grid>
                         </TabItem>
-                        <TabItem Header="{StaticResource FormPersonaRemovalTabItemHeader}">
+                        <TabItem Header="{StaticResource FormCursoRemovalTabItemHeader}">
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="25*" />
@@ -204,9 +148,9 @@
                                         <RowDefinition Height="10*" />
                                         <RowDefinition Height="20*" />
                                     </Grid.RowDefinitions>
-                                    <Label Grid.Row="0" Content="{StaticResource FormPersonaDNI}"/>
+                                    <Label Grid.Row="0" Content="{StaticResource FormCursoCod}"/>
                                     <TextBox x:Name="TxtDNIRemove" Grid.Row="1" />
-                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormPersonaDNIExample}" >
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormCursoCodxample}" >
                                         <TextBlock.Style>
                                             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
                                                 <Setter Property="Visibility" Value="Collapsed"/>
@@ -218,11 +162,11 @@
                                             </Style>
                                         </TextBlock.Style>
                                     </TextBlock>
-                                    <Button Grid.Row="3" Content="{StaticResource FormPersonaRemove}" />
+                                    <Button Grid.Row="3" Content="{StaticResource FormCursoRemoveButton}" />
                                 </Grid>
                             </Grid>
                         </TabItem>
-                        <TabItem Header="{StaticResource FormPersonaModifyTabItemHeader}">
+                        <TabItem Header="{StaticResource FormCursoModifyTabItemHeader}">
                             <Grid x:Name="ModifyTabContainer">
                                 <Grid x:Name="ModifyTab">
                                     <Grid.RowDefinitions>
