--- a/Gestion_AcademicoAdministrativa_Abastos/Strings/Constants.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Strings/Constants.xaml
@@ -24,7 +24,7 @@
     <sys:String x:Key="FormCursoNombre">Nombre</sys:String>
     <sys:String x:Key="FormCursoNombreExample">Desarrollo de Aplicaciones Multiplataforma</sys:String>
     <sys:String x:Key="FormCursoDate">Fecha de Matriculación</sys:String>
-    <sys:String x:Key="FormCursoDateExample">Federico</sys:String>
+    <sys:String x:Key="FormCursoDateExample">12/29/2019</sys:String>
     <sys:String x:Key="FormCursoShift">Es Turno de Tarde</sys:String>
     <sys:String x:Key="FormCursoCreationButton">Crear Curso</sys:String>
     <sys:String x:Key="FormCursoRemoveButton">Eliminar Curso</sys:String>
