--- a/Gestion_AcademicoAdministrativa_Abastos/FormularioCurso.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/FormularioCurso.xaml
@@ -109,8 +109,8 @@
                                         <RowDefinition Height="50*" />
                                     </Grid.RowDefinitions>
                                     <Label Content="{DynamicResource FormCursoDate}" Grid.Column="0"/>
-                                    <TextBox x:Name="TxtDate" Grid.Column="0" Grid.Row="1">
-                                    </TextBox>
+                                    <DatePicker x:Name="TxtDate" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+
 
                                     <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormCursoDateExample}" >
                                         <TextBlock.Style>
