--- a/Gestion_AcademicoAdministrativa_Abastos/Formularios/FormularioAula.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Formularios/FormularioAula.xaml
@@ -6,7 +6,185 @@
         xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
         mc:Ignorable="d"
         Title="FormularioAula" Height="450" Width="800">
-    <Grid>
-        
+    <Grid x:Name="Container" Grid.Row="1" Background="#FF15171B" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Grid x:Name="MainGridContent" Grid.Row="1" Background="{DynamicResource MainColorSolid}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid x:Name="MainPanel" Grid.Column="1" Panel.ZIndex="-2">
+                <Grid.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FF69E655" Offset="0" />
+                        <GradientStop Color="#FF006CC5" Offset="1" />
+                    </LinearGradientBrush>
+                </Grid.Background>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="5*" />
+                    <ColumnDefinition Width="90*" />
+                    <ColumnDefinition Width="5*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="5*" />
+                    <RowDefinition Height="90*" />
+                    <RowDefinition Height="5*" />
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="{StaticResource MainColorSolid}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="5*" />
+                        <ColumnDefinition Width="90*" />
+                        <ColumnDefinition Width="5*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="90*" />
+                        <RowDefinition Height="5*" />
+                    </Grid.RowDefinitions>
+                    <TabControl Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <TabItem Header="{DynamicResource FormCursoCreationTabItemHeader}">
+                            <Grid Grid.Column="1" Grid.Row="1" x:Name="CreationContentPanel"
+                                  Background="{DynamicResource BackgroundContainerGradient}">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="5*" />
+                                    <ColumnDefinition  Width="90*"/>
+                                    <ColumnDefinition  Width="5*"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="5*" />
+                                    <RowDefinition Height="15*" />
+                                    <RowDefinition Height="5*" />
+                                    <RowDefinition Height="15*" />
+                                    <RowDefinition Height="5*" />
+                                    <RowDefinition Height="10*" />
+                                    <RowDefinition Height="5*" />
+                                </Grid.RowDefinitions>
+                                <Label />
+                                <Grid Grid.Row="1" Grid.Column="1">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="35*" />
+                                        <ColumnDefinition Width="15*" />
+                                        <ColumnDefinition Width="50*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="50*" />
+                                        <RowDefinition Height="50*" />
+                                    </Grid.RowDefinitions>
+                                    <Label Content="{DynamicResource FormCursoCod}" Grid.Column="0"/>
+                                    <TextBox x:Name="TxtCod" Grid.Column="0" Grid.Row="1" />
+
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormCursoCodxample}" >
+                                        <TextBlock.Style>
+                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
+                                                <Setter Property="Visibility" Value="Collapsed"/>
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtCod}" Value="">
+                                                        <Setter Property="Visibility" Value="Visible"/>
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </TextBlock.Style>
+                                    </TextBlock>
+
+                                    <Label Content="{DynamicResource FormCursoNombre}" Grid.Column="2"/>
+                                    <TextBox Grid.Column="2" x:Name="TxtNombre" Grid.Row="1" />
+
+                                    <TextBlock Grid.Column="2" Grid.Row="1" Text="{DynamicResource FormCursoNombreExample}" >
+                                        <TextBlock.Style>
+                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
+                                                <Setter Property="Visibility" Value="Collapsed"/>
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtNombre}" Value="">
+                                                        <Setter Property="Visibility" Value="Visible"/>
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </TextBlock.Style>
+                                    </TextBlock>
+
+                                </Grid>
+                                <Grid Grid.Row="3" Grid.Column="1">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="35*" />
+                                        <ColumnDefinition Width="15*" />
+                                        <ColumnDefinition Width="50*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="50*" />
+                                        <RowDefinition Height="50*" />
+                                    </Grid.RowDefinitions>
+                                    <Label Content="{DynamicResource FormCursoDate}" Grid.Column="0"/>
+
+
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormCursoDateExample}" >
+                                        <TextBlock.Style>
+                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
+                                                <Setter Property="Visibility" Value="Collapsed"/>
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtDate}" Value="">
+                                                        <Setter Property="Visibility" Value="Visible"/>
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </TextBlock.Style>
+                                    </TextBlock>
+                                    <CheckBox Grid.Column="2" x:Name="TxtShift" Grid.Row="1" Content="{DynamicResource FormCursoShift}"/>
+                                </Grid>
+                                <Button Grid.Row="5" Grid.Column="1" Content="{StaticResource FormCursoCreationButton}" />
+                            </Grid>
+                        </TabItem>
+                        <TabItem Header="{StaticResource FormCursoRemovalTabItemHeader}">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="25*" />
+                                    <RowDefinition Height="50*" />
+                                    <RowDefinition Height="25*" />
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="15*" />
+                                    <ColumnDefinition Width="70*" />
+                                    <ColumnDefinition Width="15*" />
+                                </Grid.ColumnDefinitions>
+                                <Grid Grid.Column="1" Grid.Row="1">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="20*" />
+                                        <RowDefinition Height="30*" />
+                                        <RowDefinition Height="10*" />
+                                        <RowDefinition Height="20*" />
+                                    </Grid.RowDefinitions>
+                                    <Label Grid.Row="0" Content="{StaticResource FormCursoCod}"/>
+                                    <TextBox x:Name="TxtDNIRemove" Grid.Row="1" />
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormCursoCodxample}" >
+                                        <TextBlock.Style>
+                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
+                                                <Setter Property="Visibility" Value="Collapsed"/>
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtDNIRemove}" Value="">
+                                                        <Setter Property="Visibility" Value="Visible"/>
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </TextBlock.Style>
+                                    </TextBlock>
+                                    <Button Grid.Row="3" Content="{StaticResource FormCursoRemoveButton}" />
+                                </Grid>
+                            </Grid>
+                        </TabItem>
+                        <TabItem Header="{StaticResource FormCursoModifyTabItemHeader}">
+                            <Grid x:Name="ModifyTabContainer">
+                                <Grid x:Name="ModifyTab">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="5*" />
+                                        <RowDefinition Height="90*" />
+                                        <RowDefinition Height="5*" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="5*" />
+                                        <ColumnDefinition Width="90*" />
+                                        <ColumnDefinition Width="5*" />
+                                    </Grid.ColumnDefinitions>
+                                    <DataGrid x:Name="DataGridPersonas" Grid.Row="1" Grid.Column="1" />
+                                </Grid>
+                            </Grid>
+                        </TabItem>
+                    </TabControl>
+                </Grid>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
