--- a/Gestion_AcademicoAdministrativa_Abastos/Formularios/FormularioAsignatura.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Formularios/FormularioAsignatura.xaml
@@ -145,13 +145,13 @@
                                         <RowDefinition Height="20*" />
                                     </Grid.RowDefinitions>
                                     <Label Grid.Row="0" Content="{StaticResource FormAsignaturaCod}"/>
-                                    <TextBox x:Name="TxtDNIRemove" Grid.Row="1" />
+                                    <TextBox x:Name="TxtCodRemove" Grid.Row="1" />
                                     <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormAsignaturaCodExample}" >
                                         <TextBlock.Style>
                                             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
                                                 <Setter Property="Visibility" Value="Collapsed"/>
                                                 <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtDNIRemove}" Value="">
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtCodRemove}" Value="">
                                                         <Setter Property="Visibility" Value="Visible"/>
                                                     </DataTrigger>
                                                 </Style.Triggers>
