--- a/Gestion_AcademicoAdministrativa_Abastos/Formularios/FormularioAula.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Formularios/FormularioAula.xaml
@@ -37,7 +37,7 @@
                         <RowDefinition Height="5*" />
                     </Grid.RowDefinitions>
                     <TabControl Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                        <TabItem Header="{DynamicResource FormCursoCreationTabItemHeader}">
+                        <TabItem Header="{DynamicResource FormAulaCreationTabItemHeader}">
                             <Grid Grid.Column="1" Grid.Row="1" x:Name="CreationContentPanel"
                                   Background="{DynamicResource BackgroundContainerGradient}">
                                 <Grid.ColumnDefinitions>
@@ -57,23 +57,23 @@
                                 <Label />
                                 <Grid Grid.Row="1" Grid.Column="1">
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="35*" />
-                                        <ColumnDefinition Width="15*" />
-                                        <ColumnDefinition Width="50*" />
+                                        <ColumnDefinition Width="45*" />
+                                        <ColumnDefinition Width="5*" />
+                                        <ColumnDefinition Width="45*" />
                                     </Grid.ColumnDefinitions>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="50*" />
                                         <RowDefinition Height="50*" />
                                     </Grid.RowDefinitions>
-                                    <Label Content="{DynamicResource FormCursoCod}" Grid.Column="0"/>
-                                    <TextBox x:Name="TxtCod" Grid.Column="0" Grid.Row="1" />
+                                    <Label Content="{DynamicResource FormAulaPiso}" Grid.Column="0"/>
+                                    <TextBox x:Name="TxtPiso" Grid.Column="0" Grid.Row="1" />
 
-                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormCursoCodxample}" >
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormAulaPisoExample}" >
                                         <TextBlock.Style>
                                             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
                                                 <Setter Property="Visibility" Value="Collapsed"/>
                                                 <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtCod}" Value="">
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtPiso}" Value="">
                                                         <Setter Property="Visibility" Value="Visible"/>
                                                     </DataTrigger>
                                                 </Style.Triggers>
@@ -81,15 +81,15 @@
                                         </TextBlock.Style>
                                     </TextBlock>
 
-                                    <Label Content="{DynamicResource FormCursoNombre}" Grid.Column="2"/>
-                                    <TextBox Grid.Column="2" x:Name="TxtNombre" Grid.Row="1" />
+                                    <Label Content="{DynamicResource FormAulaNum}" Grid.Column="2"/>
+                                    <TextBox Grid.Column="2" x:Name="TxtNum" Grid.Row="1" />
 
-                                    <TextBlock Grid.Column="2" Grid.Row="1" Text="{DynamicResource FormCursoNombreExample}" >
+                                    <TextBlock Grid.Column="2" Grid.Row="1" Text="{DynamicResource FormAulaNumExample}" >
                                         <TextBlock.Style>
                                             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
                                                 <Setter Property="Visibility" Value="Collapsed"/>
                                                 <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtNombre}" Value="">
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtNum}" Value="">
                                                         <Setter Property="Visibility" Value="Visible"/>
                                                     </DataTrigger>
                                                 </Style.Triggers>
@@ -98,37 +98,10 @@
                                     </TextBlock>
 
                                 </Grid>
-                                <Grid Grid.Row="3" Grid.Column="1">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="35*" />
-                                        <ColumnDefinition Width="15*" />
-                                        <ColumnDefinition Width="50*" />
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="50*" />
-                                        <RowDefinition Height="50*" />
-                                    </Grid.RowDefinitions>
-                                    <Label Content="{DynamicResource FormCursoDate}" Grid.Column="0"/>
-
-
-                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormCursoDateExample}" >
-                                        <TextBlock.Style>
-                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
-                                                <Setter Property="Visibility" Value="Collapsed"/>
-                                                <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtDate}" Value="">
-                                                        <Setter Property="Visibility" Value="Visible"/>
-                                                    </DataTrigger>
-                                                </Style.Triggers>
-                                            </Style>
-                                        </TextBlock.Style>
-                                    </TextBlock>
-                                    <CheckBox Grid.Column="2" x:Name="TxtShift" Grid.Row="1" Content="{DynamicResource FormCursoShift}"/>
-                                </Grid>
-                                <Button Grid.Row="5" Grid.Column="1" Content="{StaticResource FormCursoCreationButton}" />
+                                <Button Grid.Row="5" Grid.Column="1" Content="{StaticResource FormAulaCreationButton}" />
                             </Grid>
                         </TabItem>
-                        <TabItem Header="{StaticResource FormCursoRemovalTabItemHeader}">
+                        <TabItem Header="{StaticResource FormAulaRemovalTabItemHeader}">
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="25*" />
@@ -147,25 +120,25 @@
                                         <RowDefinition Height="10*" />
                                         <RowDefinition Height="20*" />
                                     </Grid.RowDefinitions>
-                                    <Label Grid.Row="0" Content="{StaticResource FormCursoCod}"/>
-                                    <TextBox x:Name="TxtDNIRemove" Grid.Row="1" />
-                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormCursoCodxample}" >
+                                    <Label Grid.Row="0" Content="{StaticResource FormAulaPiso}"/>
+                                    <TextBox x:Name="TxtPisoRemove" Grid.Row="1" />
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormAulaPisoExample}" >
                                         <TextBlock.Style>
                                             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
                                                 <Setter Property="Visibility" Value="Collapsed"/>
                                                 <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtDNIRemove}" Value="">
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtPisoRemove}" Value="">
                                                         <Setter Property="Visibility" Value="Visible"/>
                                                     </DataTrigger>
                                                 </Style.Triggers>
                                             </Style>
                                         </TextBlock.Style>
                                     </TextBlock>
-                                    <Button Grid.Row="3" Content="{StaticResource FormCursoRemoveButton}" />
+                                    <Button Grid.Row="3" Content="{StaticResource FormAulaRemoveButton}" />
                                 </Grid>
                             </Grid>
                         </TabItem>
-                        <TabItem Header="{StaticResource FormCursoModifyTabItemHeader}">
+                        <TabItem Header="{StaticResource FormAulaModifyTabItemHeader}">
                             <Grid x:Name="ModifyTabContainer">
                                 <Grid x:Name="ModifyTab">
                                     <Grid.RowDefinitions>
